stuck on loading images correctly via webpack

--- a/src/styles/RootStyles.css
+++ b/src/styles/RootStyles.css
@@ -1,3 +1,15 @@
 @import 'styles.css';
 @import 'BackgroundAnimation.css';
 @import 'Header.css';
+@import 'Card.css';
+@import 'Photography.css';
+
+.app {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+body {
+  min-width: 984px;
+}
